--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -59,6 +59,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="{{ url_for('admin.courtorders') }}">Admin</a></li>
+                  <li><a href="{{ url_for('admin_rightsholder.admin_rh_index') }}">Rightsholders Admin</a></li>
                   <li><a href="{{ url_for('admin.courtorders_review') }}">Review Unmatched</a></li>
                   <li><a href="{{ url_for('admin.courtorders_group_import') }}">Import URL Groups</a></li>
               </ul>
