--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -65,7 +65,7 @@
               </ul>
 
           </li>
-          <li class=""><a href="{{ url_for('admin.savedlists') }}">Saved Lists</a></li>
+          <li class=""><a href="{{ url_for('admin_savedlists.savedlists') }}">Saved Lists</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">System Settings <span class="caret"></span></a>
               <ul class="dropdown-menu">
