--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -42,15 +42,15 @@
                   <li><a href="{{ url_for('admin.url_categories') }}">URL Categories</a></li>
               </ul>
           </li>
-          <li class=""><a href="{{ url_for('admin_ispreport_pages.ispreports') }}">ISP Reports</a></li>
+          <li class=""><a href="{{ url_for('admin_ispreport.ispreports') }}">ISP Reports</a></li>
 
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">ISP Stats<span class="caret"></span></a></a>
               <ul class="dropdown-menu">
-                  <li class=""><a href="{{ url_for('admin_ispreport_pages.ispreport_stats') }}">ISP Report Stats</a></li>
-                  <li class=""><a href="{{ url_for('admin_ispreport_pages.ispreport_reply_stats') }}">ISP Report Reply Stats</a></li>
-                  <li class=""><a href="{{ url_for('admin_ispreport_pages.ispreport_consistency') }}">ISP Blocking consistency stats</a></li>
-                  <li class=""><a href="{{ url_for('admin_ispreport_pages.ispreport_category_stats') }}">ISP Report URL Category stats</a></li>
+                  <li class=""><a href="{{ url_for('admin_ispreport.ispreport_stats') }}">ISP Report Stats</a></li>
+                  <li class=""><a href="{{ url_for('admin_ispreport.ispreport_reply_stats') }}">ISP Report Reply Stats</a></li>
+                  <li class=""><a href="{{ url_for('admin_ispreport.ispreport_consistency') }}">ISP Blocking consistency stats</a></li>
+                  <li class=""><a href="{{ url_for('admin_ispreport.ispreport_category_stats') }}">ISP Report URL Category stats</a></li>
               </ul>
           </li>
 
