--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -1,3 +1,4 @@
+{% import "auth.part.html" as auth %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,7 +34,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class=""><a href="/control">Home</a></li>
-          <li class=""><a href="{{ url_for('admin.users') }}">Users</a></li>
+            {% if g.is_level() %}
+            <li class=""><a href="{{ url_for('admin.users') }}">Users</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">URLs <span class="caret"></span></a></a>
               <ul class="dropdown-menu">
@@ -42,8 +44,10 @@
                   <li><a href="{{ url_for('admin.url_categories') }}">URL Categories</a></li>
               </ul>
           </li>
-          <li class=""><a href="{{ url_for('admin_ispreport.ispreports') }}">ISP Reports</a></li>
-
+            {% endif %}
+            {% if g.is_level('reviewer') %}
+            <li class=""><a href="{{ url_for('admin_ispreport.ispreports') }}">ISP Reports</a></li>
+            {% endif %}
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">ISP Stats<span class="caret"></span></a></a>
               <ul class="dropdown-menu">
@@ -53,7 +57,7 @@
                   <li class=""><a href="{{ url_for('admin_ispreport.ispreport_category_stats') }}">ISP Report URL Category stats</a></li>
               </ul>
           </li>
-
+          {% if g.is_level() %}
           <li class=""><a href="{{ url_for('admin.tests') }}">Test Schedule</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
@@ -73,6 +77,7 @@
                   <li class=""><a href="{{ url_for('admin.search_filter') }}">Search Filter</a></li>
               </ul>
           </li>
+          {% endif %}
           <li class=""><a href="{{url_for('admin.logout')}}" class="">Log out</a></li>
           <!-- 
           <li class="dropdown">
