--- a/BlockedFrontend/templates/admin/rightsholder/arh_view.html
+++ b/BlockedFrontend/templates/admin/rightsholder/arh_view.html
@@ -14,6 +14,9 @@
         {% for f in rh.FIELDS %}
         <div><span>{{ f.title() }}: </span>{{ rh[f] }}</div>
         {% endfor %}
+        <div>
+            <a href="{{ url_for('.admin_rh_edit', id=rh.id) }}" class="btn btn-primary">Edit</a>
+        </div>
     </div>
 </div>
 
