--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -8,16 +8,10 @@ td.center, th.center {
     text-align: center;
 }
 
-.isp-report-row {
-    height: 3.4em;
-}
 
-.action-button {
-    display: none;
-    }
 
 tr:hover * .action-button {
-    display: inline-block;
+    visibility: visible;
 }
 
 {% endblock %}
@@ -147,23 +141,23 @@ tr:hover * .action-button {
   </ul>
 </div> 
 
-<table class="table table-condensed">
+<table class="table table-condensed table-hover">
 <tr>
-  <th>URL</th>
-  <th class="center">URL<br/>Status</th>
-  <th>Email</th>
-  <th>Network</th>
-  <th>Created
+  <th class="col-md-2">URL</th>
+  <th class="col-md-1 center">URL<br/>Status</th>
+  <th class="col-md-2">Email</th>
+  <th class="col-md-2">Network</th>
+  <th class="col-md-2">Created
   {% if request.args.order == 'asc' %}
   <a href="{{ url_for('.ispreports', **args(order='desc')) }}" title="Sort by date descending"><span class="glyphicon glyphicon-chevron-up"></span></a>
   {% else %}
   <a href="{{ url_for('.ispreports', **args(order='asc')) }}" title="Sort by date ascending"><span class="glyphicon glyphicon-chevron-down"></span></a>
   {% endif %}
   </th>
-  <th class="center">Report<br/>Status</th>
-  <th>Replies</th>
+  <th class="center col-md-1">Report<br/>Status</th>
+  <th class="col-md-1">Replies</th>
   <!--<th class="center">Reviewed</th>-->
-  <th style="width: 8%"><span class="glyphicon glyphicon-cog" title="Actions menu"></span></th>
+  <th class="col-md-2 center"><span class="glyphicon glyphicon-cog" title="Actions menu"></span></th>
 </tr>
 {% for report in reports.reports %}
 <tr class="isp-report-row">
@@ -199,14 +193,14 @@ tr:hover * .action-button {
     <span class="label label-default">{{ report.status|title }}</span>    
     {% endif %}
   </td>
-  <td class="num">{{ report.reply_count }}
+  <td class="center">{{ report.reply_count }}
   {% if report.matches_policy != None %}
       <span class="text-success glyphicon glyphicon-ok-sign" title="Block has been reviewed"></span>
   {% endif %}
   </td>
   <!--<td class="center"></td>-->
   <td class="" style="">
-      <div class="btn-group action-button">
+      <div class="btn-group action-button invisible">
           <a class="btn btn-default" href="{{url_for('.ispreports_view', url=report.url, network_name=report.network_name)}}" title="View report">View</a>
           <button class="dropdown-toggle btn btn-default" title="Actions for {{ report.url }}" data-toggle="dropdown">
               <span class="caret"></span>
