--- a/BlockedFrontend/templates/cms/bbfc_report_view.html
+++ b/BlockedFrontend/templates/cms/bbfc_report_view.html
@@ -1,8 +1,10 @@
 {% extends "layout_1x3.page.html" %}
 {% import "paging.part.html" as paging %}
 {% from "network_description.part.html" import isp_info, popover_js %}
+{% import "emails.part.html" as emails %}
 
-{%set pagetitle = "View BBFC Report:" + url.url|noproto %}
+
+{%set pagetitle = "View BBFC Report" %}
 
 {% block col1_row1 %}
 {{ g.remote_content.TextAreaOne|safe }}
@@ -21,4 +23,33 @@
 {% endblock %}
 
 {% block bodyrow2 %}
+<h3>Request submitted to BBFC</h3>
+<div class="submitted-timestamp">Submitted: {{ report.created|fmtime }}</div>
+<p class="well message">
+    {{ report.message }}
+</p>
+
+<h3>BBFC response</h3>
+{% for emailobj, message in messages %}
+<div>Received: {{ emailobj.created|fmtime }}</div>
+<pre>
+    {{ emails.show_message(message, truncate=True) }}
+</pre>
+{% endfor %}
+
+<h3>Current status</h3>
+
+
+{% endblock %}
+
+{% block page_style %}
+.submitted-timestamp {
+}
+.received-timestamp {
+}
+.message {
+    background-color: #f5f5f5;
+    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+    font-size: 13px;
+}
 {% endblock %}
