--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -96,7 +96,6 @@
     <tr>
         <th>URL</th>
         <th>Network</th>
-        <th></th>
         <th>Reported at</th>
         <th>Status</th>
     </tr>
@@ -105,22 +104,29 @@
     {%   for row in lst %}
     <tr>
         {% if loop.first %}
-        <td style="width: 40%; background-color: white; padding-right: 8px" rowspan="{{ lst|length }}"><a href="{{row.url}}" rel="nofollow" target="_blank">{{ row.url }}</a>
+        <td style="width: 40%; background-color: white; padding-right: 8px" rowspan="{{ lst|length }}">
+            <a href="{{row.url}}" rel="nofollow" target="_blank" title="Open {{ row.url|noproto }} in new tab">{{ row.url }}</a>
         {% if row.message %}
             <p class="report-message"><span>&ldquo;</span>{{ row.message | strip('"')|strip_email_phone }}<span>&rdquo;</span></p>
         {% endif %}
+            <div style="margin-top: 0.5em"><a href="{{ url_for('site.site', url=row.url) }}" title="View current status of {{ row.url|noproto }}">View site blocking report</a></div>
         </td>
         {% endif %}
-        <td style="width: 15%">
+        <td>
           {{ isp_info(row.description) }}
         </td>
-        <td><a href="{{ url_for('site.site', url=row.url) }}">View site report</a></td>
         <td>{{ row.submitted | fmtime if row.submitted else "On hold" }}</td>
         <td>
-            {% if row.unblocked %}
-            <span class="label label-success">Unblocked</span>
+            {% if current_isp == 'BBFC' %}
+            <div><a href="{{ url_for('.bbfc_report_view', url=row.url) }}">View BBFC Replies</a></div>
             {% else %}
-            <span class="label label-default">Blocked</span>
+            <div>
+                {% if row.unblocked %}
+                <span class="label label-success">Unblocked</span>
+                {% else %}
+                <span class="label label-default">Blocked</span>
+                {% endif %}
+            </div>
             {% endif %}
         </td>
     </tr>
