--- a/BlockedFrontend/templates/emails.part.html
+++ b/BlockedFrontend/templates/emails.part.html
@@ -19,6 +19,7 @@
 {%-       if line.startswith('-----Original Message') %}{% set display=False %}{% endif -%}
 {%-       if line.startswith('NOTICE AND DISCLAIMER') %}{% set display=False %}{% endif -%}
 {%-       if line.startswith('BT is a founding') %}{% set display=False %}{% endif -%}
+{%-       if line.startswith('On ') %}{% set display=False %}{% endif -%}
 {%-     endif -%}
 {%-     if display -%}
 {{        line|striptags }}
