--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -135,8 +135,16 @@ Request sent to BBFC on {{ bbfc_report.created }}
 
 <ul class="nav nav-tabs">
   <li class="{{ activetab('messages','messages') }}"><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
-  <li class="{{ activetab('categories') }}"><a href="#categories" role="tab"  data-toggle="tab">Review Categories</a></li>
-  <li class="{{ activetab('rptcategories') }}"><a href="#rptcategories" role="tab"  data-toggle="tab">Report Categories</a></li>
+  <li class="{{ activetab('categories') }}"><a href="#categories" role="tab"  data-toggle="tab">Review Categories
+  {% if categories %}
+      <span class="text-success glyphicon glyphicon-ok"></span>
+  {% endif %}
+  </a></li>
+  <li class="{{ activetab('rptcategories') }}"><a href="#rptcategories" role="tab"  data-toggle="tab">Report Categories
+  {% if report_damage_categories or reporter_category %}
+      <span class="text-success glyphicon glyphicon-ok"></span>
+  {% endif %}
+  </a></li>
   <li class="{{ activetab('block') }}"><a href="#block" role="tab" data-toggle="tab">Review Block
   {% if report.matches_policy != None -%}
   <span class="text-success glyphicon glyphicon-ok"></span>
