--- a/BlockedFrontend/templates/site/check.html
+++ b/BlockedFrontend/templates/site/check.html
@@ -8,14 +8,14 @@
 <div class="row">
 <div class="col-md-7">
 
-<form action="{{url_for('.check_post')}}" method="POST" class="form form-inline">
+<form action="{{url_for('.check_post')}}" method="POST" class="form ">
 <input type="hidden" name="submit" value="{{live | lower }}" />
 
 <div class="form-group">
   <label for="url">Website address</label>
   <div class="control-group">
     <div class="input-group">
-    <input type="text" style="width: 36em" placeholder="http://" name="url" id="url" class="form-control" />
+    <input type="text" placeholder="http://" name="url" id="url" class="form-control" />
     <span class="input-group-btn">
     <input type="submit" value="Check site" class="btn btn-primary" />
     </span>
