--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -104,7 +104,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="https://bug.openrightsgroup.org/piwik/";
+    var u="https://bug.openrightsgroup.org/matomo/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '14']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
