--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
 {%     endif %}
 {%   else %}
 <div style=margin-top: 2em">
-Request sent to BBFC on {{ bbfc_report.created }}
+Request sent to BBFC on {{ bbfc_report.created|fmtime }}
 </div>
 {%   endif %}
 {% endif %}
