--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -101,6 +101,8 @@ $(document).ready(function(){
 <div class="label label-success label-lg"><span class="glyphicon glyphicon-ok success"></span> Unblocked</div>
 {% elif report.status == 'rejected' %}
 <div class="label label-danger label-lg"><span class="glyphicon glyphicon-remove success"></span> Rejected</div>
+{% elif report.status == 'no-response' %}
+<div class="label label-default label-lg"><span class="glyphicon glyphicon-remove success"></span> No response</div>
 {% endif %}
 </h2>
 
@@ -159,8 +161,16 @@ Request sent to BBFC on {{ bbfc_report.created|fmtime }}
 <div class="row">
 <div class="col-md-12">
 
+<div style="margin-top: 1.0em; margin-bottom: 1.5em">
+    {% if report.status == 'sent' %}
+<div class="pull-right">
+    <a class="btn btn-default" data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_noresponse', id=report.id) }}">
+        <span class="glyphicon glyphicon-minus"></span> Close report: No response</a>
+</div>
+    {% endif %}
 <h4>{{messagelist|length}} messages received</h4>
-<table id="messagelist" class="table table-condensed table-bordered">
+</div>
+    <table id="messagelist" class="table table-condensed table-bordered">
     <tr>
         <th>#</th>
     <th>From</th>
@@ -209,7 +219,8 @@ Request sent to BBFC on {{ bbfc_report.created|fmtime }}
                     <ul class="dropdown-menu">
                     <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_unblocked', id=selected_email.id) }}"><span class="glyphicon glyphicon-ok"></span> Unblocked</a></li>
                     <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_rejected', id=selected_email.id) }}"><span class="glyphicon glyphicon-remove"></span> Rejected</a></li>
-                    </ul>                     
+                    <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_noresponse', id=report.id) }}"><span class="glyphicon glyphicon-minus"></span> No response</a></li>
+                    </ul>
                 {% endif %}
                 {#
                 <div style="float: right">
