--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
 <div class="col-md-2" style="text-align: right">
 <h2>
 {% if report.status == 'unblocked' %}
-<div class="label label-success label-lg"><span class="glyphicon glyphicon-ok success"></span> Unblocked</div>
+<div class="label label-success label-lg"><span class="glyphicon glyphicon-ok success"></span> Accepted</div>
 {% elif report.status == 'rejected' %}
 <div class="label label-danger label-lg"><span class="glyphicon glyphicon-remove success"></span> Rejected</div>
 {% endif %}
@@ -207,7 +207,7 @@ Request sent to BBFC on {{ bbfc_report.created|fmtime }}
                 {% if report.status == 'sent' %}
                     <a class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Close Report <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                    <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_unblocked', id=selected_email.id) }}"><span class="glyphicon glyphicon-ok"></span> Unblocked</a></li>
+                    <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_unblocked', id=selected_email.id) }}"><span class="glyphicon glyphicon-ok"></span> Accepted</a></li>
                     <li><a data-id="{{selected_email.id}}" href="{{ url_for('.ispreports_status_rejected', id=selected_email.id) }}"><span class="glyphicon glyphicon-remove"></span> Rejected</a></li>
                     </ul>                     
                 {% endif %}
